# mpc

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  PARSERS.md  README.md  ResourceBundling.cmake  conanfile.py  rebuild.bat  rebuild.sh  rebuild32.bat  rebuild64.bat
src/: CMakeLists.txt  CMakeRC.cmake  Mpc.cpp  Mpc.hpp  ResourceBundling.cmake  StartUp.cpp  test.cpp
src/audiomidi/: AudioMidiServices.cpp  AudioMidiServices.hpp  DirectToDiskSettings.hpp  EventHandler.cpp  EventHandler.hpp  ExportAudioProcessAdapter.cpp  ExportAudioProcessAdapter.hpp  MpcMidiInput.cpp  MpcMidiPorts.hpp
src/command/: CopySelectedNote.hpp  InsertEvent.cpp  KeepSound.cpp  RemoveEvents.cpp  RemoveEvents.hpp
src/controls/: AbstractControls.cpp  AbstractControls.hpp  Controls.cpp  Controls.hpp  GlobalReleaseControls.cpp  GlobalReleaseControls.hpp
src/controls/disk/: AbstractDiskControls.cpp  FormatControls.cpp  SaveControls.hpp  SetupControls.cpp  SetupControls.hpp
src/controls/midisync/: AbstractMidiSyncControls.hpp  SyncControls.hpp
src/controls/misc/: AbstractMiscControls.cpp  AbstractMiscControls.hpp  SecondSeqControls.cpp  SecondSeqControls.hpp  TransControls.cpp
src/controls/mixer/: AbstractMixerControls.cpp  AbstractMixerControls.hpp  FxEditControls.cpp  FxEditControls.hpp  MixerControls.cpp  MixerControls.hpp  SelectDrumMixerControls.cpp  SelectDrumMixerControls.hpp
src/controls/other/: AbstractOtherControls.cpp  AbstractOtherControls.hpp  OthersControls.cpp  VerControls.cpp
src/ctootextensions/: InterconnectionInputProcess.cpp  InterconnectionInputProcess.hpp  InterconnectionOutputProcess.cpp  InterconnectionOutputProcess.hpp  MpcBasicSoundPlayerChannel.cpp  MpcBasicSoundPlayerChannel.hpp  MpcBasicSoundPlayerControls.cpp  MpcBasicSoundPlayerControls.hpp  MpcEnvelopeControls.cpp  MpcEnvelopeControls.hpp  MpcEnvelopeGenerator.cpp  MpcEnvelopeGenerator.hpp  MpcFaderControl.cpp  MpcFaderControl.hpp  MpcInputAdapter.cpp  MpcInputAdapter.hpp  MpcMixerControls.cpp  MpcMixerControls.hpp  MpcMixerInterconnection.cpp  MpcMixerInterconnection.hpp  MpcMultiMidiSynth.cpp  MpcMultiMidiSynth.hpp  MpcMultiSynthControls.cpp  MpcMultiSynthControls.hpp  MpcSoundOscillatorControls.cpp  MpcSoundOscillatorControls.hpp  MpcSoundPlayerChannel.cpp  MpcSoundPlayerChannel.hpp  MpcSoundPlayerControls.cpp  MpcSoundPlayerControls.hpp  MuteInfo.cpp  MuteInfo.hpp  Voice.cpp  Voice.hpp
src/disk/: AbstractDisk.cpp  AbstractDisk.hpp  MpcFile.cpp  MpcFile.hpp  PgmToProgramConverter.cpp  PgmToProgramConverter.hpp  ProgramImportAdapter.cpp  ProgramImportAdapter.hpp  ProgramLoader.cpp  ProgramLoader.hpp  RawDisk.cpp  SoundLoader.cpp  SoundLoader.hpp  SoundSaver.cpp  StdDisk.cpp  StdDisk.hpp  Stores.hpp
src/file/: AkaiNameGenerator.cpp  AkaiNameGenerator.hpp
src/hardware/: Hardware.cpp  Hardware.hpp  HwPad.hpp  HwSlider.hpp  Led.hpp  Pot.cpp  Pot.hpp
src/lcdgui/: Background.cpp  BlinkLabel.cpp  Component.cpp  Component.hpp  Effect.cpp  Effect.hpp  EnvGraph.cpp  Field.cpp  Field.hpp  FunctionKeys.cpp  FunctionKeys.hpp  Info.cpp  Knob.cpp  Knob.hpp  Label.cpp  Layer.cpp  Layer.hpp  LayeredScreen.cpp  LayeredScreen.hpp  MixerStrip.hpp  MixerTopBackground.cpp  Parameter.cpp  Popup.cpp  SelectedEventBar.cpp  TextComp.cpp  TextComp.hpp  Underline.hpp  VerticalBar.hpp
src/main/: AutoSave.cpp  AutoSave.hpp  ConstrainedInt.h  ConstrainedInt.hpp  DemoFiles.hpp  DirectorySaveTarget.cpp  DirectorySaveTarget.hpp  DiskController.cpp  DiskController.hpp  FileIoPolicy.hpp  FixedVector.hpp  FloatTypes.hpp  Helper.mm  IntTypes.hpp  IosPathUtil.mm  Logger.cpp  Logger.hpp  MacBundleResources.cpp  MacBundleResources.h  MacBundleResources.hpp  MacBundleResources.mm  MacBundleResources2.mm  MacMainBundleResources.mm  Mpc.cpp  Mpc.hpp  MpcMacros.hpp  MpcResourceUtil.cpp  MpcResourceUtil.hpp  MpcSpecs.h  MpcSpecs.hpp  Observer.hpp  Paths.cpp  Paths.hpp  RequiredResourceIntegrity.cpp  RequiredResourceIntegrity.hpp  ResourceUtil.cpp  ResourceUtil.h  SampleOps.cpp  SampleOps.hpp  SaveTarget.hpp  (+12 more)
src/midi/: MidiFile.hpp  MidiTrack.cpp
src/nvram/: AudioMidiConfig.cpp  AudioMidiConfig.hpp  KnobPositions.cpp  NvRam.hpp
src/sampler/: IndivFxMixerChannel.cpp  IndivFxMixerChannel.hpp  MonitorOutput.hpp  NoteParameters.hpp  Pad.cpp  Pad.hpp  PgmSlider.hpp  Program.cpp  Program.hpp  Sampler.cpp  Sampler.hpp  Sound.cpp  Sound.hpp  StereoMixerChannel.cpp  StereoMixerChannel.hpp  TimeStretch1.cpp  TimeStretch1.hpp
src/sequencer/: ChannelPressureEvent.hpp  Clock.hpp  ControlChangeEvent.cpp  EmptyEvent.hpp  Event.cpp  EventAdapter.cpp  EventAdapter.hpp  MidiAdapter.cpp  MidiClockEvent.hpp  NoteEvent.hpp  PitchBendEvent.cpp  PolyPressureEvent.hpp  ProgramChangeEvent.hpp  SeqUtil.cpp  SeqUtil.hpp  Sequence.hpp  Sequencer.cpp  Song.hpp  Step.cpp  Step.hpp  SystemExclusiveEvent.cpp  SystemExclusiveEvent.hpp  TempoChangeEvent.cpp  TempoChangeEvent.hpp  TimeSignature.hpp  Track.hpp
src/test/: AllFileTest.cpp  AllFileUiStateTest.cpp  AllLoadingTest.cpp  ApsLoadingTest.cpp  ApsParserTest.cpp  AutoSaveTest.cpp  BarsScreenTest.cpp  BasicSoundPlayerRoutingTest.cpp  ClockTest.cpp  DeleteProgramTest.cpp  DirectToDiskRecordingTest.cpp  DiskControllerTest.cpp  DrumNoteEventHandlerRoutingTest.cpp  EraseScreenTest.cpp  EventsScreenTest.cpp  ExternalClockTest.cpp  KaitaiAllTest.cpp  KaitaiApsTest.cpp  KaitaiMidTest.cpp  KaitaiPgmTest.cpp  KaitaiSeqTest.cpp  KaitaiSndTest.cpp  LegacyMidiControlPresetPatcher.h  LegacyMidiControlPresetV1Convertor.h  LegacyMidiControlPresetV1ConvertorTest.cpp  LegacyMidiControlPresetV2Convertor.h  LegacyMidiControlPresetV2ConvertorTest.cpp  LegacyMidiPresetPatcher.h  LegacyMidiPresetV1Convertor.h  LegacyMidiPresetV1ConvertorTest.cpp  LegacyMidiPresetV2Convertor.h  LegacyMidiPresetV2ConvertorTest.cpp  MainTest.cpp  MidiAftertouchBindingTest.cpp  MidiControlPersistenceTest.cpp  MidiControlPresetSchemaTest.cpp  MidiFileTest.cpp  MidiMultiRecordingRoutingTest.cpp  MidiPresetSchemaTest.cpp  MidiProgramChangeInputTest.cpp  (+29 more)
src/ui/: NameGui.cpp  NameGui.hpp  NameObserver.cpp  NameObserver.hpp  Uis.hpp
(+2612 files in other folders)
